Include swagger for list cars endpoint
