# doc/swagger/swagger.json
@@ -53,6 +53,58 @@
                 }
             }
         },
+        "/cars/": {
+            "get": {
+                "description": "Lists cars from a city in pages of 20 elements. from_car_id parameter\nis taken as the last seen car in a previous page.",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "List cars",
+                "operationId": "list-cars",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "City name",
+                        "name": "city",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "uuid",
+                        "description": "Last seen car ID",
+                        "name": "from_car_id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Obtained car",
+                        "schema": {
+                            "$ref": "#/definitions/docs.ListCarsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/docs.ErrorResponseBadRequest"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/docs.ErrorResponseNotFound"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/docs.ErrorResponseInternalServer"
+                        }
+                    }
+                }
+            }
+        },
         "/cars/{uuid}": {
             "get": {
                 "description": "Get a car by UUID",
@@ -64,6 +116,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "format": "uuid",
                         "description": "Car UUID",
                         "name": "uuid",
                         "in": "path",
@@ -110,6 +163,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "format": "uuid",
                         "description": "Car UUID",
                         "name": "uuid",
                         "in": "path",
@@ -162,6 +216,7 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "format": "uuid",
                         "description": "Car UUID",
                         "name": "uuid",
                         "in": "path",
@@ -254,7 +309,7 @@
             "properties": {
                 "detail": {
                     "type": "string",
-                    "example": "Bad equest"
+                    "example": "bad request"
                 },
                 "status": {
                     "type": "integer",
@@ -271,7 +326,7 @@
             "properties": {
                 "detail": {
                     "type": "string",
-                    "example": "Internal server error"
+                    "example": "internal server error"
                 },
                 "status": {
                     "type": "integer",
@@ -305,7 +360,7 @@
             "properties": {
                 "detail": {
                     "type": "string",
-                    "example": "Not Found"
+                    "example": "not Found"
                 },
                 "status": {
                     "type": "integer",
@@ -314,6 +369,17 @@
                 "title": {
                     "type": "string",
                     "example": "Not Found"
+                }
+            }
+        },
+        "docs.ListCarsResponse": {
+            "type": "object",
+            "properties": {
+                "cars": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/docs.CarResponse"
+                    }
                 }
             }
         }
